--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.7.2",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "next": "14.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
